--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <Link rel = "stylesheet" href = "bootstrap-5.0.1-dist/css/bootstrap-grid.min.css">
   
   <title>Frontend Mentor | Single Price Grid Component</title>
 
@@ -15,35 +16,42 @@
   </style>
 </head>
 <body>
-  Join our community
-
-  30-day, hassle-free money back guarantee
-
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
+  <div class = "container">
+    <div class = "row">
+      <div class = "col">
+        <h1 class = "text-success"> Join our community</h1>
+        <h3>30-day, hassle-free money back guarantee</h3>
+        <p>Gain access to our full library of tutorials alon with expert code reviews
+          . Perfect for any developers who are serious about honing their skills.
+        </p>
+      </div>
+      <div class = "con">
+        <div class="col">
+          <h3>Monthly Subscription</h3>
+          <h1>&dollar;29 per month</h1>
+          <p> Full access for less than &dollar;1 a day</p>
+          <button class = "btn">Sign Up</button>
+        </div>
+        <div class = "col">
+          <h3>Why Us</h3>
+          <ul>
+            <li>Tutorials by industry experts</li>
+            <li>  Peer &amp; expert code review</li>
+            <li>Coding exercises</li>
+            <li>Access to our Github repos</li>
+            <li>Community forum</li>
+            <li>Flashcard decks</li>
+            <li>New videos every week</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Kiiinda</a>.
     </p>
   </footer>
 </body>
