--- a/index.html
+++ b/index.html
@@ -5,48 +5,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <Link rel = "stylesheet" href = "bootstrap-5.0.1-dist/css/bootstrap-grid.min.css">
-  
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet"> 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>Frontend Mentor | Single Price Grid Component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
-<body>
-  <div class = "container">
-    <div class = "row">
-      <div class = "col">
-        <h1 class = "text-success"> Join our community</h1>
-        <h3>30-day, hassle-free money back guarantee</h3>
-        <p>Gain access to our full library of tutorials alon with expert code reviews
-          . Perfect for any developers who are serious about honing their skills.
+<body  style="background-color: hsl(218, 81%, 94%);">
+  <main>
+      <div class="container">
+        <div class="top">
+        <h1> Join our community</h1>
+        <p class="min">30-day, hassle-free money back guarantee<p>
+        <p class="description"> Gain access to our full library of tutorials alon with expert code reviews
+          .<br> Perfect for any developers who are serious about honing their skills.
         </p>
       </div>
-      <div class = "con">
-        <div class="col">
-          <h3>Monthly Subscription</h3>
-          <h1>&dollar;29 per month</h1>
-          <p> Full access for less than &dollar;1 a day</p>
-          <button class = "btn">Sign Up</button>
-        </div>
-        <div class = "col">
-          <h3>Why Us</h3>
-          <ul>
-            <li>Tutorials by industry experts</li>
-            <li>  Peer &amp; expert code review</li>
-            <li>Coding exercises</li>
-            <li>Access to our Github repos</li>
-            <li>Community forum</li>
-            <li>Flashcard decks</li>
-            <li>New videos every week</li>
-          </ul>
-        </div>
+
+      <div class=box>
+      <div class="left">
+        <h2>Monthly Subscription</h2>
+        <p><strong>&dollar;29 </strong><span>per month</span></p>
+        <p class="descrip">Full access for less than &dollar;1 a day</p>
+        <a href="#" class = "btn">Sign Up</a> 
       </div>
+
+      <div class="right">
+        <h2>Why Us</h2>
+        <ul>
+          <li>Tutorials by industry experts</li>
+          <li>  Peer &amp; expert code review</li>
+          <li>Coding exercises</li>
+          <li>Access to our Github repos</li>
+          <li>Community forum</li>
+          <li>Flashcard decks</li>
+          <li>New videos every week</li>
+        </ul>
+      </div>
+
     </div>
-  </div>
+  </main>
   
   <footer>
     <p class="attribution">
@@ -54,5 +54,7 @@
       Coded by <a href="#">Kiiinda</a>.
     </p>
   </footer>
+</div>
+
 </body>
 </html>
